Added links, photos, and past work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Booky - a perfect responsive landing page to sell/share your books online</title>
+    <title>Kat Butler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Booky - a perfect responsive landing page to sell/share your books online.">
     <meta name="author" content="rajendra prasad">
@@ -44,10 +44,12 @@
      <div class="row">
         <div class="span12">
         	<div class="header-inner">
-        	<a class="logo pull-left" href="#">Booky</a>   
+        	<a class="logo pull-left" href="#">Kat Butler</a>   
         	<div class="social-icons text-right pull-right">
-                <a href="#"><i class="icon-facebook"></i></a>
-                <a href="#"><i class="icon-twitter"></i></a>
+                <a href="http://ca.linkedin.com/in/butlerkatrina/"><i class="icon-linkedin"></i></a>
+                <a href="https://twitter.com/lomokat"><i class="icon-twitter"></i></a>
+                <a href="mailto:kat.a.butler@gmail.com"><i class="icon-envelope"></i></a>
+                <a href="assets/docs/KatrinaButler_Resume.pdf"><i class="icon-file"></i></a>
             </div><!--/social-icons-->
             </div><!--/header-inner-->
         </div><!--/span12-->
@@ -57,24 +59,14 @@
         	<div class="row">
 	            <div class="span5 text-center">
                 	<div class="marketing-media">
-                	<img src="assets/img/how-to-sell-online-book-cover.png" alt="How to sell online books" width="228" height="316" />
-                    </div><!--/marketing-media-->
+                	   <img src="assets/img/me.png" alt="How to sell online books" width="250" height="250" />
+                  </div><!--/marketing-media-->
                 </div><!--/span5-->
             	<div class="span7">
-                	<h1 class="hero-title">How To Sell Books Online</h1>
+                	<h1 class="hero-title">I love to code.</h1>
                     <p class="hero-desc">
-                    Add some descriptive content here to illustrate what the ebook is about and the benefits (what you’ll learn) attibuted to the reading it. You may want to mention how many pages it is to set expectations.
+                    I am a Software Developer with professional experience in mobile and front-end development, enthusiastic about new technologies, and am always excited to start new projects.
                     </p>
-                    <form class="hero-form">
-                        <fieldset>
-                        <div class="row-fluid">
-                            <label>Get the ebook with your email address</label>
-                            <input type="text" class="span7" placeholder="Email Address" id="email"/>
-                            <button class="btn btn-info btn-large span5">Download Now</button>                            
-                        </div>    
-                        </fieldset>
-                        <p class="text-small">eBook includes PDF, ePub and Kindle versions <span class="pull-right"><a href="#">Read Privacy Policy</a></span></p>
-                    </form>
                 </div><!--/span7-->
             </div><!--/row-->
         </div><!--/masthead-->
@@ -87,7 +79,7 @@
      	<div class="container">
         <div class="row">
             <div class="span12">
-                <h2 class="sec-title"><span>Whats Inside?</span></h2>
+                <h2 class="sec-title"><span>Past Work</span></h2>
             </div><!--span12-->
          </div><!--/row-->
          <div class="row">   
@@ -96,17 +88,18 @@
                     <div class="accordion-group">
                       <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseOne">
-                          1. Insert Chapter Title One
+                          RoamBot - GCA4 2014
                         </a>
                       </div>
                       <div id="collapseOne" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                          <p class="text-lead">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.</p>
+                          <p class="text-lead">Our team participated in the Great Canadian Appathon 4 and created RoamBot. RoamBot is a mobile game for iOS 7 and was created using iOS Sprite Kit.</p>
+                          <p><strong>Technologies Used:</strong></p>
                           <ul class="unstyled list-bullet">
-                            <li>List item one</li>
-                            <li>List item two</li>
-                            <li>List item three</li>
-                            <li>List item four</li>
+                            <li>iOS SDK</li>
+                            <li>Xcode</li>
+                            <li>Sprite Kit</li>
+                            <li>Objective-C</li>
                           </ul>
                         </div>
                       </div>
@@ -114,13 +107,20 @@
                     <div class="accordion-group">
                       <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseTwo">
-                          2. Insert Chapter Title Two
+                          Encore - Android app
                         </a>
                       </div>
                       <div id="collapseTwo" class="accordion-body collapse">
                         <div class="accordion-inner">
-                           <p class="text-lead">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch.</p>
-                          <p>Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+                           <p class="text-lead">Encore is an Android application used for concerts and events. Features include: creating/editing profiles, follow/search for friends, view friend profiles, attend/search for events, access exclusive event content, check-in to events, set home location, view your activity feed, etc.</p>
+                           <p><strong>Technologies Used:</strong></p>
+                            <ul class="unstyled list-bullet">
+                              <li>Android SDK</li>
+                              <li>Java</li>
+                              <li>Hibernate</li>
+                              <li>Struts 2</li>
+                              <li>MySQL</li>
+                            </ul>
                         </div>
                       </div>
                     </div><!--/accordion-group-->
@@ -166,28 +166,7 @@
               </div><!--/accordion-->
             </div><!--/span6-->
             <div class="span6">
-	                <ul class="thumbnails">
-                      <li class="span3">
-                        <a href="assets/img/sample-large1.png" title="Index" class="thumbnail">
-                          <img src="assets/img/sample-thumb1.png" alt="sample-thumb" width="82" height="106"/>
-                        </a>
-                      </li>
-                      <li class="span3">
-                        <a href="assets/img/sample-large2.png" title="Chapter 2" class="thumbnail">
-                          <img src="assets/img/sample-thumb2.png" alt="sample-thumb" width="82" height="106"/>
-                        </a>
-                      </li>
-                      <li class="span3">
-                        <a href="assets/img/sample-large3.png" title="Chapter 4" class="thumbnail">
-                          <img src="assets/img/sample-thumb3.png" alt="sample-thumb" width="82" height="106"/>
-                        </a>
-                      </li>
-                      <li class="span3">
-                        <a href="assets/img/sample-large4.png" title="Chapter 5" class="thumbnail">
-                          <img src="assets/img/sample-thumb4.png" alt="sample-thumb" width="82" height="106"/>
-                        </a>
-                      </li>
-                    </ul>
+	              <img src="assets/img/encore_login_framed.png" alt="mobile screenshots" height="400px"/>
             </div><!--/span6-->
         </div><!--/row-->
         </div><!--/container-->
@@ -253,24 +232,6 @@
      	<div class="container">
         <div class="row">
         	<div class="span8 offset2">
-                <form class="hero-form">
-                   <div class="row-fluid">
-                    	<div class="span3 text-center">
-                    		<div class="marketing-media"><img src="assets/img/how-to-sell-online-book-cover-small.png" width="128" height="177" alt="book cover" /></div>
-                        </div>
-                        <div class="span9">
-                        <fieldset>
-                            <div class="control-group">
-                                <label>Get the ebook with your email address</label>
-                                <input type="text" class="input-block-level" placeholder="Email Address" id="email2"/>                               
-                                <button class="btn btn-info btn-large btn-block">Download Now</button>               
-                                 <span class="text-small">eBook includes PDF, ePub and Kindle versions <a href="#" class="pull-right">Read Privacy Policy</a>
-                                </span>             
-                            </div><!--/control-group-->
-                        </fieldset>
-                        </div><!--/span9-->
-                    </div><!--/row-fluid-->
-                </form>
             </div><!--/span8-->
         </div><!--/row-->
 	    </div><!--/container-->
@@ -279,7 +240,7 @@
     	<div class="container">
             <div class="row">
                 <div class="span12">
-                    <p class="text-center">&copy; Booky Landing Page 2013. All rights reserved.</p>
+                    <p class="text-center">&copy; katbutler.com 2014. All rights reserved.</p>
                 </div><!--/span12-->
             </div><!--/row-->
         </div><!--/container-->
