Added Dandelion S3 support

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </div><!--/accordion-group-->
               </div><!--/accordion-->
             </div><!--/span6-->
-            <div class="span6">
+            <div class="phone-carousel span6 center-x">
 	              <img src="assets/img/encore_login_framed.png" alt="mobile screenshots" height="400px"/>
             </div><!--/span6-->
         </div><!--/row-->
