Fixed meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Kat Butler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Booky - a perfect responsive landing page to sell/share your books online.">
-    <meta name="author" content="rajendra prasad">
+    <meta name="description" content="Personal website for Software Developer Kat Butler">
+    <meta name="author" content="Kat Butler">
 
     <!-- Le styles -->
     <link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
