added links for GCA4, Trilogy, and Zaui

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                       </div>
                       <div id="collapseOne" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                          <p class="text-lead">Our team participated in the Great Canadian Appathon 4 and created RoamBot. RoamBot is a mobile game for iOS 7 and was created using iOS Sprite Kit.</p>
+                          <p class="text-lead">Our team participated in the <a href="https://greatcanadianappathon.com/">Great Canadian Appathon 4</a> and created RoamBot. RoamBot is a mobile game for iOS 7 and was created using iOS Sprite Kit.</p>
                           <p><strong>Technologies Used:</strong></p>
                           <ul class="unstyled list-bullet">
                             <li>iOS SDK</li>
@@ -154,7 +154,7 @@
                       </div>
                       <div id="collapseFour" class="accordion-body collapse">
                         <div class="accordion-inner">
-                          <p class="text-lead">Worked part-time with small team developing a webapp for Trilogy North America.</p>
+                          <p class="text-lead">Worked part-time with small team developing a webapp for <a href="http://www.trilogynorthamerica.com/">Trilogy North America</a>.</p>
                           <p><strong>Technologies Used:</strong></p>
                             <ul class="unstyled list-bullet">
                               <li>Ruby on Rails</li>
@@ -173,7 +173,7 @@
                       </div>
                       <div id="collapseFive" class="accordion-body collapse">
                         <div class="accordion-inner">
-                          <p class="text-lead">Currently developing an iOS mobile POS application for Zaui Software.</p>
+                          <p class="text-lead">Currently developing an iOS mobile POS application for <a href="http://www.zaui.com/">Zaui Software</a>.</p>
                           <p><strong>Technologies Used:</strong></p>
                             <ul class="unstyled list-bullet">
                               <li>Swift</li>
