Updated index page and images.

--- a/index.html
+++ b/index.html
@@ -87,13 +87,31 @@
          <div class="row">   
             <div class="span6">
           		<div class="accordion" id="chapter">
-                    <div class="accordion-group">
+              <div class="accordion-group">
                       <div class="accordion-heading">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseOne">
-                          RoamBot - GCA4 2014
+                          Zaui Mobile Apps
                         </a>
                       </div>
                       <div id="collapseOne" class="accordion-body collapse in">
+                        <div class="accordion-inner">
+                          <p class="text-lead">I design/develop/distribute iOS applications for <a href="http://www.zaui.com/">Zaui Software</a>.</p>
+                          <p><strong>Technologies Used:</strong></p>
+                            <ul class="unstyled list-bullet">
+                              <li>Swift</li>
+                              <li>Objective-C</li>
+                              <li>iOS SDK</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div><!--/accordion-group-->
+                    <div class="accordion-group">
+                      <div class="accordion-heading">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseTwo">
+                          RoamBot - GCA4 2014
+                        </a>
+                      </div>
+                      <div id="collapseTwo" class="accordion-body collapse">
                         <div class="accordion-inner">
                           <p class="text-lead">Our team participated in the <a href="https://greatcanadianappathon.com/">Great Canadian Appathon 4</a> and created RoamBot. RoamBot is a mobile game for iOS 7 and was created using iOS Sprite Kit.</p>
                           <p><strong>Technologies Used:</strong></p>
@@ -108,11 +126,11 @@
                     </div><!--/accordion-group-->
                     <div class="accordion-group">
                       <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseTwo">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseThree">
                           Encore - Android app
                         </a>
                       </div>
-                      <div id="collapseTwo" class="accordion-body collapse">
+                      <div id="collapseThree" class="accordion-body collapse">
                         <div class="accordion-inner">
                            <p class="text-lead">Encore is an Android application used for concerts and events. Features include: creating/editing profiles, follow/search for friends, view friend profiles, attend/search for events, access exclusive event content, check-in to events, set home location, view your activity feed, etc.</p>
                            <p><strong>Technologies Used:</strong></p>
@@ -128,11 +146,11 @@
                     </div><!--/accordion-group-->
                     <div class="accordion-group">
                       <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseThree">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseFour">
                           Friend Trends - Scala Web App
                         </a>
                       </div>
-                      <div id="collapseThree" class="accordion-body collapse">
+                      <div id="collapseFour" class="accordion-body collapse">
                         <div class="accordion-inner">
                            <p class="text-lead">The goal of FriendTrends is to recreate Twitter Trends by removing the geolocation factor altogether. Users will be able to view Trends that relate to them. When you follow someone on Twitter, you care about their Tweets - that is why FriendTrends only shows you Trending Topics based on who you are following.</p>
                            <p><strong>Technologies Used:</strong></p>
@@ -148,11 +166,11 @@
                     </div><!--/accordion-group-->
                     <div class="accordion-group">
                     <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseFour">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseFive">
                           Trilogy North America Web App
                         </a>
                       </div>
-                      <div id="collapseFour" class="accordion-body collapse">
+                      <div id="collapseFive" class="accordion-body collapse">
                         <div class="accordion-inner">
                           <p class="text-lead">Worked part-time with small team developing a webapp for <a href="http://www.trilogynorthamerica.com/">Trilogy North America</a>.</p>
                           <p><strong>Technologies Used:</strong></p>
@@ -165,35 +183,17 @@
                         </div>
                       </div>
                     </div><!--/accordion-group-->
-                    <div class="accordion-group">
-                      <div class="accordion-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#chapter" href="#collapseFive">
-                          Zaui Mobile App
-                        </a>
-                      </div>
-                      <div id="collapseFive" class="accordion-body collapse">
-                        <div class="accordion-inner">
-                          <p class="text-lead">Currently developing an iOS mobile POS application for <a href="http://www.zaui.com/">Zaui Software</a>.</p>
-                          <p><strong>Technologies Used:</strong></p>
-                            <ul class="unstyled list-bullet">
-                              <li>Swift</li>
-                              <li>Objective-C</li>
-                              <li>iOS SDK</li>
-                            </ul>
-                        </div>
-                      </div>
-                    </div><!--/accordion-group-->
               </div><!--/accordion-->
             </div><!--/span6-->
             <div id="cbp-qtrotator" class="phone-carousel span6 cbp-qtrotator">
+                <div class="cbp-qtcontent">
+                  <img src="assets/img/zauimobile.png" alt="mobile screenshots" height="400px"/>
+                </div>
                 <div class="cbp-qtcontent">
                   <img src="assets/img/encore_login_framed.png" alt="mobile screenshots" height="400px"/>
                 </div>
                 <div class="cbp-qtcontent">
                   <img src="assets/img/encore_signup_framed.png" alt="mobile screenshots" height="400px"/>
-                </div>
-                <div class="cbp-qtcontent">
-                  <img src="assets/img/encore_friends_framed.png" alt="mobile screenshots" height="400px"/>
                 </div>
                 <div class="cbp-qtcontent">
                   <img src="assets/img/roambot_levels.png" alt="mobile screenshots" height="400px"/>
@@ -203,12 +203,6 @@
                 </div>
                 <div class="cbp-qtcontent">
                   <img src="assets/img/roambot_tutorial.png" alt="mobile screenshots" height="400px"/>
-                </div>
-                <div class="cbp-qtcontent">
-                  <img src="assets/img/zaui_order.png" alt="mobile screenshots" height="400px"/>
-                </div>
-                <div class="cbp-qtcontent">
-                  <img src="assets/img/zaui_manifest.png" alt="mobile screenshots" height="400px"/>
                 </div>
             </div><!--/span6-->
         </div><!--/row-->
@@ -225,9 +219,13 @@
             <div class="span10 offset1">    
                 <div class="media">
                   <div class="media-body">
-                    <p class="text-lead-big">I have always had a passion for technology. I don't consider software development as just a career - I am always excited to learn new technologies and work on side projects. After graduating from Carleton University with a Bachelor of Computer Science, I moved to Vancouver. I currently work as a Software Developer for Zaui Software where we build software for the travel and tourism industry.</p>
-                    <p class="text-lead-big">Besides programming, I have a passion for film photography and Geocaching. If you're a fellow Geocacher, feel free to check out my profile below.</p>
-                    <p style="text-align:center;"><a href="http://www.geocaching.com/profile/?guid=76c1f494-9204-4074-99c3-74945cba6885" target="_blank"><img src="http://img.geocaching.com/stats/img.aspx?txt=Let's+Go+Geocaching!&uid=76c1f494-9204-4074-99c3-74945cba6885&bg=1" alt="Profile for lomokat" /></a></p>
+                    <p class="text-lead-big">I have always had a passion for technology. I don't consider software development as just a career - I am always excited to learn new technologies and work on side projects. After graduating from Carleton University with a Bachelor of Computer Science, I moved to Vancouver. I currently work as a Software Developer for <a href="http://www.zaui.com/">Zaui Software</a> where we build software for the travel and tourism industry. </p>
+                    <p class="text-lead-big">Besides programming, I have a passion for photography and hiking. You can check out my 500px profile <a href="https://500px.com/katabutler">here</a>, or check out my Instagram <a href="https://instagram.com/lomokat/">here</a>.</p>
+                    <p style="text-align:center;">
+                    <!-- SnapWidget -->
+                    <!-- SnapWidget -->
+<!-- SnapWidget -->
+<iframe src="http://snapwidget.com/sc/?u=bG9tb2thdHxpbnwyMDB8NXwzfHxub3w1fGZhZGVPdXR8b25TdGFydHxub3x5ZXM=&ve=010715" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:500px; height:200px"></iframe></p>
                     </div><!--/social-icons-->
                   </div><!--/media-body-->
                 </div><!--/media-->
@@ -249,7 +247,7 @@
     	<div class="container">
             <div class="row">
                 <div class="span12">
-                    <p class="text-center">&copy; katbutler.com 2014. All rights reserved.</p>
+                    <p class="text-center">&copy; katbutler.com 2015. All rights reserved.</p>
                 </div><!--/span12-->
             </div><!--/row-->
         </div><!--/container-->
