--- a/index.html
+++ b/index.html
@@ -95,12 +95,16 @@
                       </div>
                       <div id="collapseOne" class="accordion-body collapse in">
                         <div class="accordion-inner">
-                          <p class="text-lead">I design/develop/distribute iOS applications for <a href="http://www.zaui.com/">Zaui Software</a>.</p>
+                          <p class="text-lead">I design/develop/distribute iOS and Android applications for <a href="http://www.zaui.com/">Zaui Software</a>.</p>
                           <p><strong>Technologies Used:</strong></p>
                             <ul class="unstyled list-bullet">
                               <li>Swift</li>
                               <li>Objective-C</li>
                               <li>iOS SDK</li>
+                              <li>Xcode</li>
+                              <li>Java</li>
+                              <li>Android SDK</li>
+                              <li>Android Studio</li>
                             </ul>
                         </div>
                       </div>
